增加下载闪屏页代码，待还有bug

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.greetty.appmanage">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name=".app.RxApp"
@@ -22,6 +22,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.activity.MainActivity" />
+
+        <service
+            android:name=".service.SplashDownLoadService"
+            android:enabled="true"
+            android:exported="false"/>
+
     </application>
 
 </manifest>
