可实现动态加载闪屏页

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         <activity android:name=".ui.activity.MainActivity" />
 
         <service
-            android:name=".service.SplashDownLoadService"
+            android:name="com.greetty.appmanage.service.SplashDownLoadService"
             android:enabled="true"
             android:exported="false"/>
 
