--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,10 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.ashokvarma.android:bottom-navigation-bar:1.3.0'
+//    compile 'com.roughike:bottom-bar:2.3.1'
+    compile 'com.roughike:bottom-bar:1.3.+'
+    compile 'com.android.support:design:25.+'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 
 }
