使用一个内容监听者存在重复加载数据问题，还未及诶绝

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -45,7 +45,14 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".ui.activity.ComPareActivity"></activity>
+        <activity android:name=".ui.activity.ComPareActivity"/>
+
+        <provider
+            android:authorities="com.greetty.appmanager"
+            android:name="com.greetty.appmanage.model.db.contentprovider.AppLockProvider">
+        </provider>
+
+
     </application>
 
 </manifest>
